<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.subhrajyoti.movies.MainActivity">

    <item android:id="@+id/fav"
        android:title="@string/fav_button_add"
        android:icon="@drawable/fav_add"
        app:showAsAction="always"
        android:visible="false">
    </item>
    <item android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share_menu"
        app:showAsAction="always"
        android:visible="false">
    </item>
    <item android:id="@+id/action_sort_by"
        android:icon="@drawable/sort"
        android:title="@string/sort_menu"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_sort_by_popularity"
                    android:title="@string/sort_option_popularity" />
                <item android:id="@+id/action_sort_by_rating"
                    android:title="@string/sort_option_rated" />
                <item android:id="@+id/action_sort_by_favourite"
                    android:title="@string/sort_option_favourite" />
            </group>
        </menu>
    </item>
</menu>
